Add folders from include/ directory as libraries (#354)
closes #193