@@ -7,7 +7,9 @@ import org.amshove.natparse.natural.project.NaturalProject;
 
 import java.nio.file.Path;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class BuildFileProjectReader
 {
@@ -27,14 +29,49 @@ public class BuildFileProjectReader
 	public NaturalProject getNaturalProject(Path buildfilePath)
 	{
 		var buildFileParser = new NaturalBuildFileParser(filesystem);
-		var naturalLibraries = buildFileParser.parseLibraries(buildfilePath);
+		var xmlLibraryDefinitions = buildFileParser.parseLibraries(buildfilePath);
 
 		var sourceDirectories = getSourceDirectories(buildfilePath);
-		removeSystemLibraries(naturalLibraries, sourceDirectories);
-		addSourcePaths(naturalLibraries, sourceDirectories);
+		var includeDirectories = getIncludeDirectories(buildfilePath);
 
-		var actualLibraries = mapXmlLibraries(naturalLibraries);
-		return new NaturalProject(buildfilePath.getParent(), actualLibraries);
+		removeLibrariesWithoutSourceFolders(xmlLibraryDefinitions, sourceDirectories, includeDirectories);
+		addSourcePaths(xmlLibraryDefinitions, sourceDirectories);
+
+		var actualLibraries = mapXmlLibraries(xmlLibraryDefinitions);
+		addLibrariesFromIncludeDirectory(actualLibraries, xmlLibraryDefinitions, includeDirectories);
+		return new NaturalProject(buildfilePath.getParent(), List.copyOf(actualLibraries.values()));
+	}
+
+	private void addLibrariesFromIncludeDirectory(Map<String, NaturalLibrary> naturalLibraries, List<XmlNaturalLibrary> xmlLibraries, List<Path> includePaths)
+	{
+		if (includePaths.isEmpty())
+		{
+			return;
+		}
+
+		var includeLibraries = includePaths.stream().map(NaturalLibrary::new).toList();
+		for (var includeLibrary : includeLibraries)
+		{
+			if (naturalLibraries.containsKey(includeLibrary.getName()))
+			{
+				throw new BuildFileParserException("Can't add library include/%s when a library with the same name exists under Natural-Libraries/".formatted(includeLibrary.getName()));
+			}
+
+			naturalLibraries.put(includeLibrary.getName(), includeLibrary);
+			// Go through the XML definitions again to see if the library from include/ is a steplib
+			// that we can now provide.
+			for (var xmlLibrary : xmlLibraries)
+			{
+				for (var steplib : xmlLibrary.getSteplibs())
+				{
+					if (steplib.equals(includeLibrary.getName()) && naturalLibraries.containsKey(steplib))
+					{
+						naturalLibraries.get(xmlLibrary.getName()).addStepLib(includeLibrary);
+						break;
+					}
+				}
+			}
+		}
 	}
 
 	private void addSourcePaths(List<XmlNaturalLibrary> naturalLibraries, List<Path> sourceDirectories)
@@ -46,9 +83,11 @@ public class BuildFileProjectReader
 		}
 	}
 
-	private void removeSystemLibraries(List<XmlNaturalLibrary> naturalLibraries, List<Path> sourceDirectories)
+	private void removeLibrariesWithoutSourceFolders(List<XmlNaturalLibrary> naturalLibraries, List<Path> sourceDirectories, List<Path> includeDirectories)
 	{
-		var nonSystemLibraries = sourceDirectories.stream().map(p -> p.toFile().getName()).collect(Collectors.toList());
+		var nonSystemLibraries = Stream.concat(sourceDirectories.stream(), includeDirectories.stream())
+			.map(p -> p.toFile().getName())
+			.toList();
 
 		// Remove system-steplibs
 		for (var naturalLibrary : naturalLibraries)
@@ -63,9 +102,18 @@ public class BuildFileProjectReader
 		return filesystem.listDirectories(buildfilePath.getParent().resolve("Natural-Libraries"));
 	}
 
-	private List<NaturalLibrary> mapXmlLibraries(List<XmlNaturalLibrary> libraries)
+	private List<Path> getIncludeDirectories(Path buildFilePath)
 	{
-		var libraryMap = libraries.stream().collect(Collectors.toMap(XmlNaturalLibrary::getName, l -> new NaturalLibrary(l.getSourcePath())));
+		var includePath = buildFilePath.getParent().resolve("include");
+		return filesystem.exists(includePath)
+			? filesystem.listDirectories(includePath)
+			: List.of();
+	}
+
+	private Map<String, NaturalLibrary> mapXmlLibraries(List<XmlNaturalLibrary> libraries)
+	{
+		var libraryMap = libraries.stream().collect(Collectors.toMap(XmlNaturalLibrary::getName, this::mapXmlLibrary));
+		var systemLib = libraryMap.get("SYSTEM");
 
 		for (var library : libraries)
 		{
@@ -73,16 +121,25 @@ public class BuildFileProjectReader
 
 			for (var stepLib : library.getSteplibs())
 			{
-				theLibrary
-					.addStepLib(libraryMap.get(stepLib));
+				if (libraryMap.containsKey(stepLib))
+				{
+					theLibrary
+						.addStepLib(libraryMap.get(stepLib));
+				}
 			}
 
-			if (libraryMap.containsKey("SYSTEM"))
+			if (!library.getName().equals("SYSTEM") && systemLib != null)
 			{
-				theLibrary.addStepLib(libraryMap.get("SYSTEM"));
+				theLibrary.addStepLib(systemLib);
 			}
 		}
 
-		return List.copyOf(libraryMap.values());
+		return libraryMap;
+	}
+
+	private NaturalLibrary mapXmlLibrary(XmlNaturalLibrary lib)
+	{
+		var sourcePathUnderNaturalLibraries = lib.getSourcePath();
+		return new NaturalLibrary(sourcePathUnderNaturalLibraries);
 	}
 }
